# sendto-protocol

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: agent.rs  api.rs  crypto.rs  daemon.rs  lib.rs  signaling.rs  types.rs
