[package]
name = "sendto-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sendtomy/sendto-protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
crypto_box = { version = "0.9", features = ["std"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake3 = "1"
rand = "0.8"
